# mandelbrot-revisited

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: linters.yml  unit_tests.yml
shaders/: fragment.glsl  vertex.glsl
